--- a/style.css
+++ b/style.css
@@ -1,40 +1,6 @@
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  text-decoration: none;
-  align-items: center;
-  text-shadow: 25px;
-  box-shadow: 0px 2px 10px grey;
+@import "css/button.css";
+@import "css/carrousel.css";
+@import "css/contact.css";
+@import "css/navbar.css";
+@import "css/nos_produits.css";
 
-}
-
-.logo {
-  text-decoration: none;
-}
-
-.logo > img {
-  height: 70px;
-  width: 70px;
-  object-fit: cover;
-  border-radius: 50%;
-}
-
- .img-carrousel {
-  height:70vh;
-  object-fit: cover;
-}
-
-.link {
-  text-decoration: none;
-  margin: 20px;
-  padding: 15px;
-  background: pink;
-  color: white;
-  font-size: 14px;
-  font-family: Arial;
-  border-radius: 4px;
-}
-
-.link: hover {
-  background-color: blue;
-}
